--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "com.kenrampage.reporting",
   "version": "1.0.0",
   "displayName": "Rampage Reporting",
-  "description": "A suite of date collection and analysis tools for Unity",
-  "unity": "6000.0.37",
+  "description": "A suite of data collection and analysis tools for Unity",
+  "unity": "6000.0",
   "author": {
     "name": "Ken Rampage",
     "url": "https://github.com/kenrampage"
